--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,9 @@
 
 body {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   -webkit-font-smoothing: antialiased;
   overflow-y: auto;
   scrollbar-width: thin;
@@ -54,6 +57,10 @@ h6 {
   overflow-wrap: break-word;
   color: white;
   font-family: monospace;
+}
+
+h1 {
+  font-size: 30px;
 }
 
 a {
@@ -109,9 +116,24 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
   width: min(500px, 100% - 16px);
   margin-inline: auto;
+  border: solid 4px #737373;
+}
+
+.newGame {
+  background-image: url("/smiley_play.png");
+  width: 40px;
+  height: 40px;
+  background-size: cover;
+  margin-top: 24px;
+}
+
+.line {
+  width: 100%;
+  height: 1px;
+  background-color: white;
+  margin-top: 24px;
 }
 
 .cellRow {
